welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:3: error: Int does not take parameters
	val resultat = nbPas(6)
                            ^