welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(nbPas: Int,versLAvant:Boolean) {
	val resultat = nbPas(6)
		 if(versLAvant==true){
		 	avance()==nbPas; 	
	} else {
		recule()==nbPas; 
	}	
   } 
